# Api2PDF

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  cli.py
app/config/: __init__.py  models.py
app/core/: constants.py  errors.py  pipeline.py
app/document/: __init__.py  compiler.py  dedup.py  models.py  sorter.py  titles.py
app/exporter/: pdf_exporter.py
app/net/: client.py  crawler.py  fetcher.py  image_fetcher.py  sitemap.py
app/parser/: extractor.py  filters.py  html_parser.py  urls.py
app/utils/: file_utils.py  logger.py  time_utils.py
scripts/: build_exe.ps1
tests/: test_ad_cleanup.py  test_dedup.py  test_extractor.py  test_filters.py  test_follow_link.py  test_image_block.py  test_pdf_exporter.py  test_pipeline_integration.py  test_release_hardening.py  test_sitemap.py  test_stdlib_extractor.py  test_titles.py  test_urls.py
