[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api2pdf"
version = "0.1.0"
description = "Export API documentation websites to a single offline PDF."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click==8.1.7",
    "typer==0.12.3",
    "rich==13.7.1",
    "httpx==0.27.0",
    "beautifulsoup4==4.12.3",
    "lxml==5.1.1",
    "trafilatura==1.9.0",
    "reportlab==4.2.0",
]

[project.scripts]
api2pdf = "app.cli:app"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
